--- a/css/index.css
+++ b/css/index.css
@@ -163,10 +163,46 @@ img {
   max-width: 100%;
   height: auto;
 }
+a {
+  text-decoration: none;
+}
 .container {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
+}
+nav {
+  border-bottom: 2px dashed #C0C0C0;
+}
+nav .nav {
+  max-width: 800px;
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: inherit;
+}
+nav .nav .brand {
+  width: fit-content;
+  font-family: 'Indie Flower', cursive;
+  font-size: 3.2rem;
+  padding: 10px 0;
+  color: #212529;
+}
+nav .nav ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+nav .nav ul li a {
+  padding: 0 15px;
+  font-size: 1.5rem;
+  color: #212529;
+}
+nav .nav ul li a:hover {
+  border-bottom: 1px dashed #212529;
 }
 .footer {
   width: 100%;
@@ -178,6 +214,14 @@ img {
   color: #212529;
   font-size: 1.6rem;
   padding: 20px;
+}
+.header-welcome {
+  border-bottom: 2px dashed #C0C0C0;
+  padding-bottom: 10px;
+}
+.header-welcome img {
+  width: 100%;
+  margin-bottom: 15px;
 }
 .home .content-section {
   margin: 30px 0;
