--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,3 +1,12 @@
+.header-welcome {
+  border-bottom: 2px dashed @navigation-border;
+  padding-bottom: 10px;
+  img {
+    width: 100%;
+    margin-bottom: 15px;
+  }
+}
+
 .home {
 
   .content-section {
