--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,7 @@
 // Mixins in here
+.flex-layout(@direction, @justify, @align) {
+    display: flex;
+    flex-direction: @direction;
+    justify-content: @justify;
+    align-items: @align;
+}
