--- a/less/global.less
+++ b/less/global.less
@@ -43,6 +43,12 @@ a {
   text-decoration: none;
 }
 
+button {
+  background: none;
+  border: none;
+  outline: none;
+}
+
 .container {
   max-width: 800px;
   width: 100%;
