--- a/css/index.css
+++ b/css/index.css
@@ -166,10 +166,31 @@ img {
 a {
   text-decoration: none;
 }
+button {
+  background: none;
+  border: none;
+  outline: none;
+}
 .container {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
+}
+.btn {
+  background-color: #17A2B8;
+  color: #FFEBCD;
+  padding: 10px 20px;
+  text-align: center;
+  border-radius: 8px;
+  cursor: pointer;
+  width: 120px;
+  font-size: 1.5rem;
+  font-weight: bold;
+  transition: 0.3s;
+  width: 100%;
+}
+.btn:hover {
+  background-color: #117a8b;
 }
 nav {
   border-bottom: 2px dashed #C0C0C0;
