--- a/less/index.less
+++ b/less/index.less
@@ -2,6 +2,7 @@
 @import 'mixins';
 @import 'reset';
 @import 'global';
+@import 'button';
 @import 'navigation';
 @import 'footer';
 @import 'home-page';
