--- a/less/index.less
+++ b/less/index.less
@@ -2,7 +2,8 @@
 @import 'mixins';
 @import 'reset';
 @import 'global';
-@import 'button';
+@import 'animations';
+@import 'buttons';
 @import 'navigation';
 @import 'footer';
 @import 'home-page';
