--- a/less/home-page.less
+++ b/less/home-page.less
@@ -94,3 +94,35 @@
     }
   }
 }// home
+
+.vacation-form {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: transparent;
+  z-index: 1;
+  .animation.bounce-in();
+
+  form {
+    position: absolute;
+    top: 20%;
+    left: 25%;
+    width: 50%;
+    height: 100px;
+    background-color: @white;
+    z-index: 5;
+  }
+
+  .filter {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: @shark;
+    opacity: 0.9;
+    z-index: 2;
+  }
+}
