--- a/less/mixins.less
+++ b/less/mixins.less
@@ -22,3 +22,16 @@
         background-color: darken(@bg-color, 10%);
     }
 }
+
+// Animations
+.keyframes(@name, @arguments) {
+    @-moz-keyframes @name { @arguments(); }
+    @-webkit-keyframes @name { @arguments(); }
+    @keyframes @name { @arguments(); }
+}
+
+.animations(@arguments) {
+    animation: @arguments;
+    -webkit-animation: @arguments;
+    -moz-animation: @arguments;
+}
