--- a/less/index.less
+++ b/less/index.less
@@ -4,6 +4,7 @@
 @import 'global';
 @import 'animations';
 @import 'buttons';
+@import 'inputs';
 @import 'navigation';
 @import 'footer';
 @import 'home-page';
